[metadata]
name = cisco_config_parser
version = 1.0.2
author = Ahmad Rezazadeh
author_email = Ahmad1785@gmail.com
description = This Package Will Parse Cisco IOS, IOS-XE and IOS-XR Configuration File.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arezazadeh/cisco-config-parser

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src