[metadata]
name = cisco_config_parser
version = 1.0.14
author = Ahmad Rezazadeh
author_email = Ahmad1785@gmail.com
description = This Package Will Parse Cisco IOS, IOS-XE and IOS-XR Configuration File.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arezazadeh/cisco_config_parser

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.6
install_requires = [
    'netmiko>=3.4.0'
]
[options.packages.find]
where = src
install_requires = [
    'netmiko>=3.4.0'
]